# io.github.sharkdp.pastel

./: README.md  generated-sources.json  io.github.sharkdp.pastel.desktop  io.github.sharkdp.pastel.json  io.github.sharkdp.pastel.metainfo.xml  pyproject.toml
