[tool.poetry]
name = "io.github.sharkdp.pastel"
version = "0.9.0"
description = ""
authors = ["Cameron Rodriguez <dev@camrod.me>"]
license = "CCO-1.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
aiohttp = "^3.8.3"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
